# agentic-Orchestration-builder

./: .gitignore  Dockerfile  README.md  aI-demo-apps-ec2-key.pem  build_and_push.sh  docker-entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  start.py
app/: api_configure.py  config.py  llm_utils.py  main.py
app/auth/: auth.py  jwt_handler.py
app/core/: agents.py  appointmentflow.py  assistant.py  assistant_init.py  boto3client.py  cancelReschedule.py  chroma_db_init.py  consent_flow.py  email_send.py  emergencyContact.py  emotionalSupport.py  end_flow.py  events.py  existingUser.py  faqflow.py  findHospital.py  flow_classifier.py  greetings.py  ivfSuccessRate.py  ivf_calculation_flow.py  ivf_centers.py  ivf_packages.py  ivf_steps.py  kbSetUP.py  lifestyleandpreparations.py  loan_and_emi_options.py  medicalTerms.py  scheduler_core.py
app/core/v2/: websocket_init.py
app/cruds/: agent_cruds.py  knowledgebase_cruds.py  llmmodel_cruds.py  message_cruds.py  orchestration_cruds.py  otp_verification.py  permission_cruds.py  role_cruds.py  rolepermissionmapping_cruds.py  step_cruds.py  threads_cruds.py  user_cruds.py
app/cruds/v2/: message_cruds.py  threads_cruds.py
app/database/: __init__.py
app/database/utils/: tunnel_and_secret.py
app/datasets/: faq.json  ivf_chatbot_dataset_large 1.json  need.json  schema.json
app/middleware/: middleware.py
app/models/: agents_model.py  knowledgebase_model.py  lead_generation.py  llmmodels_models.py  orchestration_instace.py  orchestration_model.py  otp_verification.py  permission_model.py  role_master.py  role_permission_model.py  steps_model.py  threads.py  user_info.py  users.py
app/models/v2/: message.py  threads.py
app/routes/: agents_route.py  approval_route.py  assistant_route.py  auth_route.py  index.py  knowledge_base_route.py  llmmodel_route.py  message_route.py  orchestration_route.py  permission_route.py  role_master_route.py  rolepermissionmapping_route.py  steps_route.py  thread_route.py  userInfoRoute.py
app/routes/v2/: assistant_route.py  message_route.py  thread_route.py
app/schemas/: agents_schemas.py  enums.py  knowledgebase_schema.py  llmmodel_schemas.py  message_schemas.py  orchestration_schema.py  otp_verification.py  permission_schemas.py  response.py  role_permission_schema.py  role_schema.py  step_schema.py  user_information.py  user_schemas.py
app/schemas/v2/: message_schemas.py  thread_schemas.py
app/utils/: config.py  datetime.py  error_handling.py  llm_utils.py  response.py
app/utils/v2/: llm_utils.py
certificates/: iivf-documentdbkp.pem  mongo.pem
src/backend/app/: config.py  main.py
src/backend/app/auth/: auth.py  jwt_handler.py
src/backend/app/config/: config.py
src/backend/app/core/: appointmentflow.py  assistant.py  assistant_init.py  assistant_init2.py  boto3client.py  chroma_db_init.py  end_flow.py  flow_classifier.py  ivf_calculation_flow.py  ivf_centers.py  websocket_init.py
src/backend/app/cruds/: message_cruds.py  threads_cruds.py  user_cruds.py
src/backend/app/database/: __init__.py  curds.py
src/backend/app/datasets/: center.json
src/backend/app/middleware/: middleware.py
src/backend/app/models/: message.py  threads.py  user_info.py  users.py
src/backend/app/modules/: assistant_init.py  auth.py  jwt_handler.py  websocket_init.py
src/backend/app/routes/: auth_route.py  (+3 more)
(+3 files in other folders)
