[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hozefa <hozefa.a@kansoftware.com>"]

packages = [{ include = "backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
beanie = "^1.29.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
datetime = "^5.5"
pydantic-settings = "^2.8.1"
bcrypt = "^4.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
redis = {extras = ["async"], version = "^5.2.1"}
openai = "1.74.0"
kafka-python = "^2.1.5"
aiohttp = "^3.11.18"
chromadb = "0.4.24"
numpy = "1.26.4"
boto3 = "^1.40.18"
geopy = "^2.4.1"
haversine = "^2.9.0"

[tool.poetry.scripts]
dev = "src.backend.app.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"