[project]
name = "iivf-chatbot-backend"
version = "0.1.0"
description = "AI-powered backend for IVF chatbot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.20.0",
    "beanie>=1.29.0",
    "pydantic[email]>=2.11.3",
    "pydantic-settings>=2.8.1",
    "bcrypt>=4.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "boto3>=1.40.18",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "motor>=3.3.1",
    "loguru>=0.7.2",
    "redis>=5.0.0", 
]
